# Dean-Valuation-Engine

./: .gitignore  .gitignore copy  2025-07-21-caveat-the-messages-below-were-generated-by-the-u.txt  README.md  agent_business_analyst.mkd  agent_fundamental_analyst.mkd  agent_moat_analyst.mkd  agentic.py  analysis_report.md  example_config.yaml  fundamental_framework.txt  list_runs.py  main.py  main2.py  pyproject.toml  todo_list.md
agent/: hello.py
agents/business_analyst/: core_business_task.py  market_sizing_task.py
agents/business_analyst_team/: core_business_analyst.py  market_sizing_analyst.py
docs/: agent_financial_strength_analyst.mkd  agent_growth_analyst.md  agent_profitability_analyst.md  fundamental_framework.txt
playgroud/: main_debug.py
src/: __init__.py
src/agents/: constant.py  general_analyst_agent.py  planner_agent.py  registry.py
src/agents/business_analyst_team/: __init__.py  core_business_analyst.py  market_sizing_analyst.py
src/agents/specialize_agent/: __init__.py  (+7 more)
src/graph_nodes/: conditional_logic.py  executor_logic.py  graph_builder.py  graph_state.py  planner_logic.py  state_handlers.py
src/guardrails/: README.md  __init__.py  config.yml  flow.co  guardrail_manager.py  improper_output_guardrails.co  note.txt  prompt_inject_guardrails.co  prompt_injection.py  sensitive_info.py  sensitive_info_guardrails.co
src/test/: test_guardrail.py
src/tools/: search_tools.py  web_loader_tools.py
src/utils/: __init__.py  checkpoint_manager.py  checkpoint_registry.py  config.py  config_manager.py  graph_logger.py  logger.py  openrouter_client.py  pretty_print.py  recovery_handler.py  run_manager.py  state_serializer.py
tools/: search_tools.py  web_loader_tools.py
utils/: config.py  logger.py
(+9 files in other folders)
